--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
   "devDependencies": {
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
-    "tailwindcss": "^3.2.6"
+    "tailwind-scrollbar": "^2.1.0",
+    "tailwind-scrollbar-hide": "^1.1.7",
+    "tailwindcss": "^3.2.6",
+    "tailwindcss-textshadow": "^2.1.3"
   }
 }
